--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express-validator": "^6.13.0",
     "hbs": "^4.1.2",
     "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "dotenv": "^10.0.0"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
